Revise README.md for clarity and structure: Updated project description, enhanced table of contents with icons, and reorganized sections to improve readability. Added detailed explanations of language features, architecture, and advanced concepts, including object-oriented programming and REPL functionalities. Improved examples and usage instructions for better user guidance.